--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,72 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>猫眼电影</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root">
+      <style>
+        .start-wrap {
+          color: #e54847;
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          display:flex;
+          align-items: center;
+          flex-direction: column;
+          justify-content: center;
+          margin-top: -128px;
+        }
+        .start-wrap .text {
+          width: 70px;
+          font-size: 36px;
+          line-height: 50px;
+          text-align: center;
+        }
+        .start-wrap .bottom {
+          position: absolute;
+          bottom: 10px;
+          line-height: 20px;
+        }
+        .start-wrap .bottom .icon {
+          background-image: url('/static/img/logo@2x.png');
+          width: 50px;
+          height: 50px;
+          background-size: 50px 50px;
+          margin: 10px auto;
+        }
+        @media (-webkit-min-device-pixel-ratio: 3), not all {
+          .start-wrap .bottom .icon {
+            background-image: url('/static/img/logo@3x.png')
+          }
+        }
+        .start-wrap .bottom .title {
+          font-weight: bold;
+          font-size: 24px;
+          margin-bottom: 6px;
+          text-align: center;
+        }
+        .start-wrap .bottom .copyright {
+          color: #666;
+          font-size: 12px;
+        }
+      </style>
+      <div class="start-wrap">
+        <div class="text">
+          娱乐看猫眼
+        </div>
+        <div class="bottom">
+          <div class="icon"></div>
+          <p class="title">猫眼电影</p>
+          <p class="copyright">@maoyan.com 美团云提供技术服务</p>
+        </div>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
